crates/solar-apis/tests/snapshots/snapshots_of_the_wire__batch_empty.snap
---
source: crates/solar-apis/tests/snapshots_of_the_wire.rs
assertion_line: 80
expression: "answer(& r#\"[]\"#)"
---
{
  "error": {
    "code": -32600,
    "data": {
      "details": [
        {
          "docs": "docs/ERRORS.md#invalid_argument",
          "expected": "a batch with at least one request in it",
          "field": null,
          "hint": "Send the requests, or send nothing at all.",
          "received": []
        }
      ],
      "meta": {
        "api_version": null,
        "arch": "[arch]",
        "duration_us": "[duration]",
        "method": null,
        "os": "[os]",
        "protocol": "solar/1",
        "request_id": null,
        "solar_version": "[version]",
        "started_at": "[timestamp]"
      },
      "reason": "BATCH_EMPTY",
      "status": "INVALID_ARGUMENT"
    },
    "message": "The request is an empty batch, which asks for nothing."
  },
  "id": null,
  "jsonrpc": "2.0"
}
